2005-10-01  Jim Huang  <jserv@kaffe.org>

	* kaffe/kaffevm/stats.c: Fixlet to compilation error when
	--with-stats enabled.
	Reported by Pietro Ferrari <pietro.ferrari@gmail.com>.

2005-09-30  Jim Huang  <jserv@kaffe.org>

	* configure.ac: Improve Nano-X detection.

	* libraries/clib/awt/classpath-qt/componentevent.cpp,
	libraries/clib/awt/classpath-qt/mainqtthread.cpp,
	libraries/clib/awt/classpath-qt/qtframepeer.cpp:
	Add regular includes.

	* libraries/javalib/Makefile.am.in: Fixlet to Nano-X AWT.

	* po/zh_CN.po,
	po/zh_TW.po: Fix typo.

2005-09-30  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/scripts/javadoc.in,
	kaffe/scripts/compat/javadoc.in: Removed ANTLR_JAR.

	Reported by:  Joshua Nichols  <joshua.nichols@gmail.com>
	
2005-09-28  Rafal Lewczuk <rafal.lewczuk@gmail.com>

	* kaffe/kaffevm/kaffe.def,
	kaffe/kaffevm/intrp/machine.c,
	kaffe/kaffevm/jit/machine.h,
	kaffe/kaffevm/jit3/machine.h,
	kaffe/kaffevm/verifier/verify.c:
	Simple direct threading interpreter implementation.

2005-09-26  Ito Kazumitsu  <kaz@maczuka.gcd.org>

	* RELEASE-NOTES: Changed the number of tests from 147 to 148.

2005-09-25  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac: Bumped version number.
	Simplified gmp tests.

	* include/Arrays.h: HArrayOfBoolean fixed type of
	data.

	* kaffe/kaffevm/support.c: (bitCount) Make lpc unsigned.

	* kaffe/kaffevm/systems/unix-jthreads/jthread.c 
	(restore_fds_and_exit),
	kaffe/kaffevm/systems/unix-jthreads/jthread.h,
	(jthread_exit_when_done): Removed bad NONRETURNING tag.

	
	
2005-09-24  Guilhem Lavaux  <guilhem@kaffe.org>

	* kaffe/kaffevm/kaffe-gc/gc-mem.c
	(gc_block_alloc): Handle heap growing backward. Fixed initialization
	of the block array.
	(gc_heap_grow): If blocks are prepended update gc_first_block and not
	gc_last_block.
	(gc_first_block): New pointer to hold the first block in the primitive block
	list.

2005-09-23  Gwenole Beauchesne  <gbeauchesne@mandriva.com>
